# funwave-pybatch

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: funwave.py
src/core/: batch.py  directory.py  param.py  table.py
src/directorybatching/: __init__.py
src/directorybatching/core/: batch.py  directory.py  job.py  logger.py  misc.py  parallel.py  parser.py  status.py  table.py
src/directorybatching/model/: __init__.py  funwave.py
src/models/: funwave.py
