[tool.poetry]
name = "directorybatching"
version = "0.1.0"
description = "Framework for batching embarrassingly parallelizable processing based on directory structure."
authors = [
   "Michael-Angelo Y.-H. Lam <michaelangelo.yh.lam@gmail.com>"
]
maintainers = [
   "Michael-Angelo Y.-H. Lam <michaelangelo.yh.lam@gmail.com>"
]
keywords = ["funwave-tvd", "parallel"]
license = "BSD-2-Clause"
readme = "README.md"

#[project.urls]
#documentation = "https://mayhl.github.io/FUNWAVE-TVD-Python-Tools/"
#repository = "https://github.com/mayhl/FUNWAVE-TVD-Python-Tools"

[tool.poetry.dependencies]
python = ">=3.8,<4"
numpy = "<=1.24.4"
anytree = "^2.12.1"
termcolor = "^2.4.0"
pandas = "^2.0.3"

[tool.poetry2conda]
name = "directorybatching"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
